[tool.poetry]
name = "lobster-translator-cli"
version = "0.1.0"
description = ""
authors = ["rbrtrss <roberto.rousse@gmail.com>"]
readme = "README.md"
packages = [{include = "lobster_translator_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
process = "lobster_translator_cli.cli:process"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
